<resources>
    <string name="app_name">Travel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_travel">New Travel</string>
    <string name="title_activity_edit_travel">Edit Travel</string>
    <string name="this_is_hint">This is Hint</string>
    <string name="add">Add</string>
    <string name="enter_travel_tittle">Enter Travel Tittle</string>
    <string name="select_city">Select City</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="delete">DELETE</string>
    <string name="title_delete_dialog">Are you sure you want to delete?</string>
    <string name="message_delete_dialog">All data for this travel will be permanently deleted</string>
    <string name="sort">Sort</string>
    <string name="sort_default">Default</string>
    <string name="travel_title_ascending">Travel title ascending</string>
    <string name="travel_title_descending">Travel title descending</string>
    <string name="start_date_ascending">Start date ascending</string>
    <string name="start_date_descending">Start date descending</string>
    <string name="travel_detail">Travel Detail</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tittle_frag_dairy">Diary</string>
    <string name="tittle_frag_daily_plans">Daily Plans</string>
    <string name="tittle_frag_expenses">Expenses</string>
    <string name="title_activity_plan_detail">Plan Detail Activity</string>
    <string name="title_activity_diary_detail">Diary Detail Activity</string>
    <string name="title_activity_expenses_detail">Expenses Detail Activity</string>

</resources>
