<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.admin.travel.mainScreen.MainActivity">
    <item
        android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:orderInCategory="100"
        android:title="@string/sort"
        app:showAsAction="ifRoom|withText">
        <menu>
            <group
                android:id="@+id/action_sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_default"
                    android:title="@string/sort_default" />
                <item
                    android:id="@+id/action_sort_travel_asc"
                    android:title="@string/travel_title_ascending" />
                <item
                    android:id="@+id/action_sort_travel_desc"
                    android:title="@string/travel_title_descending" />
                <item
                    android:id="@+id/action_sort_start_asc"
                    android:title="@string/start_date_ascending" />
                <item
                    android:id="@+id/action_sort_start_desc"
                    android:title="@string/start_date_descending" />

            </group>
        </menu>
    </item>
</menu>
